fix: too try bug by herilala
