# doc/api.yml
@@ -304,6 +304,36 @@ paths:
         "500":
           $ref: "#/components/responses/500"
 
+  "/categories/{cid}":
+    get:
+      tags:
+        - Category
+      summary: Get Category by identifier.
+      operationId: getCategoryById
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: The identified category.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "429":
+          $ref: "#/components/responses/429"
+        "500":
+          $ref: "#/components/responses/500"
+
   "/users/followers":
     get:
       tags:
