# src/main/java/com/blogify/blogapi/endpoint/rest/controller/CategoryController.java
@@ -6,6 +6,7 @@ import com.blogify.blogapi.service.CategoryService;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -21,5 +22,11 @@ public class CategoryController {
     return service.findAll().stream()
             .map(mapper::toRest)
             .toList();
+  }
+
+  @GetMapping(value = "/categories/{cid}")
+  public Category getCategoryById(
+          @PathVariable("cid") String categoryId) {
+    return mapper.toRest(service.findById(categoryId));
   }
 }
